Bug 1145988 - Unbreak build on non-SPS platforms after bug 1129249. r=dholbert f=chiajung