layout/base/RestyleTracker.cpp
@@ -83,7 +83,9 @@ CollectLaterSiblings(nsISupports* aElement,
 
 struct RestyleEnumerateData : RestyleTracker::Hints {
   nsRefPtr<dom::Element> mElement;
+#ifdef MOZ_ENABLE_PROFILER_SPS
   UniquePtr<ProfilerBacktrace> mBacktrace;
+#endif
 };
 
 struct RestyleCollector {
@@ -141,7 +143,9 @@ CollectRestyles(nsISupports* aElement,
   currentRestyle->mElement = element;
   currentRestyle->mRestyleHint = aData->mRestyleHint;
   currentRestyle->mChangeHint = aData->mChangeHint;
+#ifdef MOZ_ENABLE_PROFILER_SPS
   currentRestyle->mBacktrace = Move(aData->mBacktrace);
+#endif
 
 #ifdef RESTYLE_LOGGING
   collector->count++;
@@ -308,9 +312,11 @@ RestyleTracker::DoProcessRestyles()
         }
 
         Maybe<GeckoProfilerTracingRAII> profilerRAII;
+#ifdef MOZ_ENABLE_PROFILER_SPS
         if (profiler_feature_active("restyle")) {
           profilerRAII.emplace("Paint", "Styles", Move(data->mBacktrace));
         }
+#endif
         ProcessOneRestyle(element, data->mRestyleHint, data->mChangeHint);
         AddRestyleRootsIfAwaitingRestyle(data->mDescendants);
       }
@@ -348,9 +354,11 @@ RestyleTracker::DoProcessRestyles()
           LOG_RESTYLE_INDENT();
 
           Maybe<GeckoProfilerTracingRAII> profilerRAII;
+#ifdef MOZ_ENABLE_PROFILER_SPS
           if (profiler_feature_active("restyle")) {
             profilerRAII.emplace("Paint", "Styles", Move(currentRestyle->mBacktrace));
           }
+#endif
           ProcessOneRestyle(currentRestyle->mElement,
                             currentRestyle->mRestyleHint,
                             currentRestyle->mChangeHint);
